wip fix footer spacing

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -103,10 +103,12 @@ body {
 			justify-content: space-evenly;
 			margin-top: 50px;
 			color: $logo-color;
+			width: 100%;
 
 			.photo-copyright {
 				display: flex;
 				justify-content: space-evenly;
+				width: 100%;
 			}
 
 			.footer-bottom {
